...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/numMedidor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="INGRESE NUMERO MEDIDOR" />

    <Button
        android:id="@+id/query_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Buscar Cliente Medidor" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:text="rut"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:onClick="Enviar"
        android:text="Registrar Lectura" />

    <Button
        android:id="@+id/btnvVerifica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="consultar"
        android:text="Verificar Lectura" />

    <Button
        android:id="@+id/exportar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Exportar"
        android:text="Exportar BBDD" />

    <Button
        android:id="@+id/btnImportar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Importar"
        android:text="IMPORTAR BBDD" />


</LinearLayout>

</ScrollView>
