...
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.windows10.App_APR.Login">

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Ingrese Usuario"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText6"
...
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:hint="Pass en la BD"/>

    <Button
        android:id="@+id/buttonl"
        android:layout_width="match_parent"
        android:layout_height="133dp"

        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />
</LinearLayout>
